feat(user): add user manipulation routes
